#ifndef FILE_CANNON_TYPE_HPP
#define FILE_CANNON_TYPE_HPP

enum CannonType {
    Light,
    Medium,
    Heavy
};

#endif