#ifndef FILE_SHIP_SIZE_HPP
#define FILE_SHIP_SIZE_HPP

enum class ShipSize
{
    Small,
    Normal
};

#endif