#ifndef FILE_SHIP_WEIGHT_HPP
#define FILE_SHIP_WEIGHT_HPP

enum class ShipWeight
{
    Light,
    Normal,
    Heavy
};

#endif